--- a/JS StopWatch/index.html
+++ b/JS StopWatch/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./style/style.css" />
-    <script src="app.js" defer></script>
+
     <title>JS Stop Watch</title>
   </head>
   <body>
@@ -20,11 +20,11 @@
       <div class="container" id="text">
         <h1 id="title">JS Stop Watch</h1>
         <div id="wrapper">
-          <h3 id="minutes" class="numbers">1</h3>
+          <h3 id="minutes" class="numbers">00</h3>
           <span class="colon">:</span>
-          <h3 id="seconds" class="numbers">2</h3>
+          <h3 id="seconds" class="numbers">00</h3>
           <span class="colon">:</span>
-          <h3 id="milliseconds" class="numbers">23</h3>
+          <h3 id="milliseconds" class="numbers">00</h3>
         </div>
       </div>
       <div class="container" id="buttons">
@@ -35,5 +35,6 @@
         </button>
       </div>
     </main>
+    <script src="app.js"></script>
   </body>
 </html>
