Layout flickering fixed

--- a/JS StopWatch/index.html
+++ b/JS StopWatch/index.html
@@ -20,11 +20,17 @@
       <div class="container" id="text">
         <h1 id="title">JS Stop Watch</h1>
         <div id="wrapper">
-          <h3 id="minutes" class="numbers">00</h3>
+          <div class="nr-wr">
+            <h3 id="minutes" class="numbers">00</h3>
+          </div>
           <span class="colon">:</span>
-          <h3 id="seconds" class="numbers">00</h3>
+          <div class="nr-wr">
+            <h3 id="seconds" class="numbers">00</h3>
+          </div>
           <span class="colon">:</span>
-          <h3 id="milliseconds" class="numbers">00</h3>
+          <div class="nr-wr">
+            <h3 id="milliseconds" class="numbers">00</h3>
+          </div>
         </div>
       </div>
       <div class="container" id="buttons">
